# 588-light-crypto

./: .gitignore  CMakeLists.txt  Dockerfile  README.md  package.xml
ascon-c/: CMakeLists.txt
launch/: crypto.launch
src/: crypto_helpers.cpp  crypto_helpers.h  decrypt_teleop.cpp  encrypt_teleop.cpp  encrypt_test.cpp  test.cpp
